--- a/src/WhiteboardClientGUI.form
+++ b/src/WhiteboardClientGUI.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="WhiteboardClientGUI">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="401"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -13,30 +13,153 @@
           <background color="-16776961"/>
         </properties>
         <border type="none"/>
-        <children>
-          <grid id="80014" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints border-constraint="East"/>
-            <properties/>
-            <border type="none"/>
-            <children/>
-          </grid>
-        </children>
+        <children/>
       </grid>
       <grid id="185d" binding="buttonContainer" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints border-constraint="South"/>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="ac1f0" class="javax.swing.JButton" binding="getShapes">
-            <constraints/>
-            <properties>
-              <text value="Get"/>
-            </properties>
-          </component>
           <component id="49589" class="javax.swing.JButton" binding="clearMineButton" default-binding="true">
             <constraints/>
             <properties>
               <text value="Clear Mine"/>
+            </properties>
+          </component>
+          <component id="44695" class="javax.swing.JButton" binding="clearAllButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Clear All"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="a4af3" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints border-constraint="East"/>
+        <properties>
+          <background color="-1118482"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <grid id="44616" binding="controlContainer" layout-manager="GridBagLayout">
+            <constraints border-constraint="South"/>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="1ab31" class="javax.swing.JComboBox" binding="colourSelector">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <model/>
+                </properties>
+              </component>
+              <component id="94670" class="javax.swing.JComboBox" binding="shapeSelector">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="c27f2" class="javax.swing.JSpinner" binding="widthSpinner">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="392d3" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Shape:"/>
+                </properties>
+              </component>
+              <component id="d4db2" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Colour: "/>
+                </properties>
+              </component>
+              <component id="ed0f8" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Width (px):"/>
+                </properties>
+              </component>
+              <component id="e1422" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Height (px):"/>
+                </properties>
+              </component>
+              <component id="cfd59" class="javax.swing.JSpinner" binding="heightSpinner">
+                <constraints>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties/>
+              </component>
+              <grid id="976d4" layout-manager="BorderLayout" hgap="0" vgap="0">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children/>
+              </grid>
+            </children>
+          </grid>
+          <component id="96d0f" class="javax.swing.JList" binding="clientList">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <background color="-1118482"/>
+              <enabled value="true"/>
+            </properties>
+          </component>
+          <component id="60eb5" class="javax.swing.JLabel">
+            <constraints border-constraint="North"/>
+            <properties>
+              <background color="-1118482"/>
+              <font size="16" style="1"/>
+              <horizontalAlignment value="0"/>
+              <text value="Active Clients"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="c6e89" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints border-constraint="North"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="65d06" class="javax.swing.JLabel">
+            <constraints border-constraint="West"/>
+            <properties>
+              <text value="9"/>
+            </properties>
+          </component>
+          <component id="98771" class="javax.swing.JTextField" binding="clientNameField">
+            <constraints border-constraint="Center"/>
+            <properties/>
+          </component>
+          <component id="f40d6" class="javax.swing.JButton" binding="setNameButton" default-binding="true">
+            <constraints border-constraint="East"/>
+            <properties>
+              <text value="Set Name"/>
             </properties>
           </component>
         </children>
